# GamingRL

./: .pre-commit-config.yaml  CHANGELOG.md  CHECKPOINT_STATUS.md  CONTRIBUTING.md  DESIGN.md  Foundation.md  INTEGRITY_REPORT.md  PROJECT_STATUS.md  QUICK_START.md  README.md  RULES.md  STANDARDS.md  play.py  pyproject.toml  replay.py  requirements.txt  roadmap_dqn_checkers_to_star_craft.md
.agent/workflows/: implement_game_logger.md  implement_heuristic_agent.md  implement_human_vs_bot.md
.cursor/: Claude.md  implementation_plan.md  task.md
agent/: README.md  __init__.py  dqn.py  heuristic_agent.py  loader.py  network.py  replay_buffer.py
agent/tests/: test_dqn_agent.py  test_heuristic_agent.py  test_replay_buffer.py
config/: checkers_rules.json
data/: README.md
docs/: JSON_FILES_INDEX.md
docs/api/: API_REFERENCE.md
docs/guides/: CLAUDE_CODE_GUIDE.md  DEVELOPER_MANUAL.md  WORKFLOW_PROTOCOL.md
docs/research/: WORKFLOW_0_DESIGN_RESEARCH.md  WORKFLOW_3_VISUALIZATION_RESEARCH.md
env/: README.md  __init__.py  checkers_env.py  representation.py  rules.py  utils.py
env/tests/: __init__.py  test_determinism.py  test_legal_moves.py  test_rewards.py  test_serialization.py  test_terminal_states.py
env/tests/test_cases/: test_001_simple_move.json  test_002_forced_capture.json  test_003_multi_jump.json  test_004_prefer_longest_capture.json  test_005_king_promotion_simple.json  test_006_king_promotion_during_capture.json  test_007_king_movement.json  test_008_blocked_piece.json  test_009_no_pieces.json  test_010_complex_multi_jump.json  test_011_king_capture.json  test_012_multiple_capture_options.json  test_013_initial_board.json  test_014_king_backward_capture.json  test_015_draw_repetition.json  test_016_no_legal_moves_both.json  test_017_king_multi_jump.json  test_018_edge_board.json  test_019_blocked_by_own.json  test_020_max_steps.json  test_021_complex_endgame.json
examples/: play_random.py  train_minimal.py
scripts/: benchmark_heuristic.py  generate_games.py  play_vs_bot.py  verify_project.py
tests/: __init__.py
training/: README.md  __init__.py  train_dqn.py
ui/: README.md  __init__.py  interaction.py
utils/: game_logger.py
utils/tests/: test_game_logger.py
viz/: README.md  __init__.py  board_renderer.py  hooks.py  live_plot.py  tb_logger.py
viz/tests/: __init__.py  test_board_renderer.py  test_hooks.py  test_tb_logger.py
